# raftkv-studio

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile.backend  README.md  RaftKV_Studio_README_v2.md  TESTING.md  docker-compose.yml
.github/workflows/: backend.yml  control-plane.yml  demos.yml  ui.yml
backend/: CMakeLists.txt  README.md
backend/config/: node1.yaml  node2.yaml  node3.yaml
backend/include/raftkv/common/: result.h  status.h  types.h
backend/include/raftkv/kv/: command.h  command_codec.h  state_machine.h
backend/include/raftkv/net/: raft_rpc_mapper.h
backend/include/raftkv/raft/: in_process_cluster.h  log_entry.h  raft_log.h  raft_node.h  raft_role.h  snapshot.h
backend/include/raftkv/storage/: file_kv_store.h  file_log_store.h  file_metadata_store.h  kv_store.h  log_store.h  metadata_store.h
backend/proto/: debug.proto  event.proto  kv.proto  raft.proto
backend/src/: main.cpp
backend/src/common/: version.cpp
backend/src/kv/: command.cpp  command_codec.cpp  state_machine.cpp
backend/src/net/: raft_rpc_mapper.cpp
backend/src/raft/: in_process_cluster.cpp  raft_log.cpp  raft_node.cpp  snapshot.cpp
backend/src/storage/: file_kv_store.cpp  file_log_store.cpp  file_metadata_store.cpp
backend/tests/unit/: failover_test.cpp  raft_log_test.cpp  raft_node_test.cpp  replication_test.cpp  rpc_mapper_test.cpp  smoke_test.cpp  snapshot_test.cpp  state_machine_test.cpp  storage_test.cpp
control-plane/: README.md
control-plane/src/raftkv_control_plane/: __init__.py  cluster_service.py  http_app.py  main.py  models.py
control-plane/tests/: test_control_plane.py
docs/: DEMO_GUIDE.md  INTERVIEW_GUIDE.md  PHASE_PLAN.md  PROJECT_DEMONSTRATION_RUNBOOK.md  phase-1-backend-skeleton.md  phase-10-control-plane-api.md  phase-11-raft-observability-ui.md  phase-12-fault-injection-demos.md  phase-13-snapshots-log-compaction.md  phase-14-portfolio-polish.md  phase-15-modern-interactive-ui.md  phase-2-in-memory-kv-state-machine.md  phase-3-raft-log-core.md  phase-4-in-process-raft-cluster.md  phase-5-quorum-log-replication.md  phase-6-follower-catchup-failover.md  phase-7-persistent-raft-storage.md  phase-8-grpc-raft-rpc.md  phase-9-docker-demo-cluster.md
scripts/: build_backend.sh  demo_all.sh  demo_control_plane.sh  demo_follower_catchup.sh  demo_leader_election.sh  demo_leader_failover.sh  demo_log_replication.sh  demo_network_partition.sh  demo_no_quorum.sh  demo_snapshot_install.sh  docker_test_backend.sh  reset_cluster.sh  run_cluster.sh  run_control_plane.sh  run_dev.sh  run_ui.sh  stop_cluster.sh  stop_dev.sh  test_backend.sh  test_control_plane.sh  test_ui.sh
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: api.ts  main.tsx  styles.css  types.ts
